tests/paczka1/fuzzy1/15332135.err
Error in line 7: hzT0 A195 24,7
Error in line 16: hzT0 A694 57,6
Error in line 22: 1tmIg A426 41,6
Error in line 29: 1tmIg A694 28,5
